# lexi

./: .gitignore  README.md  all_packages.xlsx  live_trigger.py  main.py  ocr_full.py  process_target.py  pyproject.toml  requirements.txt  uv_lock_to_csv.py
saved_frames/triggered/: landmarks.json
saved_frames/triggered/ocr/: targets.json
