[project]
name = "lexi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.13.0",
    "ipykernel>=6.29.5",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pyaudio>=0.2.14",
    "pytesseract>=0.3.13",
    "pyttsx3==2.98",
    "speechrecognition>=3.14.2",
]
